TEST_PROGRAMS/VALID/05/op_precedence.go
/* Operator precidence */
package main

func main() {
	x, y, z = 1, 2, 3
	// x= x/y*z //Should be the same as (x / y) * z
}
