TEST_PROGRAMS/INVALID/04/90.go
package main

func main() {
    var (x, y
            z = 1, 2, 3;)
}
